--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
     
 
 </head>
@@ -17,14 +18,24 @@
 <body>
     <div id="container">
         <img id="image" src="images/3730806.jpg" alt="shopping picture">
-        <input id="input-field" type="text" name="input" placeholder="items...">
-        <button id="add-button" onclick="addItem()">Add Item</button>
+        <div class="input-text-mic">
+            <input id="input-field" type="text" name="input" placeholder="items...">
+            <button id="mic-on">🎙️</button>
+            <button id="mic-off">📴</button>
+            <button id="clear-input-field">❌</button>
+            <p id="counter"></p>
+        </div>
+
+        <button id="add-button" >Add Item</button>
         <ul id="shopping-list">
         </ul>
     </div>
 
 
     <script src="script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="./speech_recognition.js"></script>
+
 </body>
 
 </html>
